fix app right title to align button and current city

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,16 @@
 *{
   font-family: 'Roboto', sans-serif;
 }
+
+.right-title{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  /* justify-content: center; */
+}
+
+.right-title p{
+  color: white;
+  margin: 0 20px;
+  font-size: 18px;
+}
